--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@
 /tmp
 
 /public/uploads
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+# Ignore application configuration
+/config/application.yml
