--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -3,19 +3,15 @@
 one:
   title: MyString
   slug: MyString
-  venue_id: 
-  host: MyString
-  start_at: 2015-07-06 17:58:11
-  end_at: 2015-07-06 17:58:11
-  type: 
+  venue_id_id: 
+  start_at: 2015-10-26 08:49:16
+  end_at: 2015-10-26 08:49:16
   content: MyText
 
 two:
   title: MyString
   slug: MyString
-  venue_id: 
-  host: MyString
-  start_at: 2015-07-06 17:58:11
-  end_at: 2015-07-06 17:58:11
-  type: 
+  venue_id_id: 
+  start_at: 2015-10-26 08:49:16
+  end_at: 2015-10-26 08:49:16
   content: MyText
