--- a/config/database.yml
+++ b/config/database.yml
@@ -5,26 +5,22 @@
 #   gem 'sqlite3'
 #
 
-development:
-  adapter: postgresql
-  pool: 5
-  timeout: 5000
-  database: casinos
-  username: kevin
-  password:
-
-
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+   adapter: sqlite3
+   pool: 5
+   timeout: 5000
+
+development:
+  <<: *default
+  database: db/development.sqlite3
 
 # development:
-#   <<: *default
-#   database: db/development.sqlite3
-
-
-
+#    adapter: postgresql
+#    pool: 5
+#    timeout: 5000
+#    database: casinos
+#    username: kevin
+#    password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
